<resources>
    <string name="app_name">E-LEARNING</string>
    <string name="sign_up" translatable="false">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="pseudo">PSEUDO</string>
    <string name="password">MOT DE PASSE</string>
    <string name="Connecter">CONNERCTER</string>
    <string name="forgetPass">oublier mot de passe?</string>
    <string name="nom">NOM</string>
    <string name="Prenom">PRENOM</string>
    <string name="email">EMAIL</string>
    <string name="cofmot">CONFIRMER MOT DE PASSE</string>
    <string name="inscrir">INSCRIRE</string>
    <string name="autreInsc">Ou s inscrir avec</string>
    <string name="formateur">FORMATEUR</string>
    <string name="etudiant">APPRENANT</string>
    <string name="choixUser">Vous étez: </string>
    <string name="mesconf">MES CONFERENCES</string>
    <string name="addConf">AJOUTER CONFERENCE</string>
    <string name="autreCon">AUTRE CONFERENCES</string>
    <string name="serach">SEARCH</string>
    <string name="titre">TITRE DE CONFERENCE*</string>
    <string name="DateConf">DATE DE CONFERENCE*</string>
    <string name="heureDeb">HEURE DEBUT*</string>
    <string name="heureFin">HEURE FIN*</string>
    <string name="Descp">DESCRIPTION*</string>
    <string name="adres">ADDRESSE*</string>
    <string name="add">AJOUTER</string>
    <string name="formatdate">(jj-mm-aaaa)</string>
    <string name="formatheur">(hh:mm)</string>
    <string name="apartirde">A PARTIR DE</string>
    <string name="jusqua">A</string>
    <string name="Titre">TITRE</string>
    <string name="descrip">DESCRIPTION</string>
    <string name="adresse">ADDRESSE</string>
    <string name="Date">DATE</string>
    <string name="update">MODIFIER</string>
    <string name="commencer">COMMENCER CONFERENCE</string>
    <string name="picture">IMAGE</string>
    <string name="description_info">DESCRIPTION INFORMATION</string>
    <string name="take_picture">Take picture</string>
</resources>
