<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@android:color/holo_blue_light"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/T"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:text="@string/Titre"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/T"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/T"
        android:text="@string/DateConf"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/D"
        android:layout_toRightOf="@+id/D"
        android:text="@string/heureDeb"
        android:layout_marginRight="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/hf"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/hd"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/hd"
        android:text="@string/heureFin"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:text="@string/formateur"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold" />
</LinearLayout>