<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.nesrine.e_learning.FormateurMenu">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/professor"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/b1"
        style="@style/AppTheme"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:onClick="ShowMy"
        android:text="@string/mesconf" />

    <Button
        android:id="@+id/b2"
        style="@style/AppTheme"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b1"
        android:layout_alignStart="@+id/b1"
        android:layout_below="@+id/b1"
        android:layout_marginTop="29dp"
        android:onClick="AddCon"
        android:text="@string/addConf" />

    <Button
        android:id="@+id/b3"
        style="@style/AppTheme"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="autConf"
        android:text="@string/autreCon"
        android:layout_below="@+id/b2"
        android:layout_alignLeft="@+id/b2"
        android:layout_alignStart="@+id/b2" />

    <SearchView
        android:layout_width="175dp"
        android:layout_height="20dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6.17"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/serach" />


    </SearchView>
</RelativeLayout>
