<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nesrine.e_learning.MyConferences">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/holo_blue_light"
        android:orientation="horizontal"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/T"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:text="@string/Titre"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/T"
            android:layout_toRightOf="@+id/T"
            android:text="@string/DateConf"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/D"
            android:layout_toRightOf="@+id/D"
            android:text="@string/heureDeb"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hf"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/hd"
            android:layout_toRightOf="@+id/hd"
            android:text="@string/heureFin"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:text="@string/formateur"
            android:textAppearance="@style/TextAppearance.AppCompat.Notification"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/lecture"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignRight="@+id/imageView5"
        android:layout_below="@+id/imageView5"
        android:layout_marginTop="19dp"
        android:text="@string/mesconf"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linearLayout" />

</RelativeLayout>
