<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.nesrine.e_learning.SignUp">
    <Button
        android:id="@+id/loginB"
        style="@style/AppTheme"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:background="@android:color/darker_gray"
        android:text="@string/login"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="29dp"
        android:onClick="gotologin"/>

    <Button
        android:id="@+id/signupB"
        style="@style/AppTheme"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:onClick="gotosign"
        android:layout_toLeftOf="@+id/loginB"
        android:layout_toStartOf="@+id/loginB"
        android:background="@android:color/holo_green_light"
        android:text="@string/sign_up"
        android:textColor="@android:color/black" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/brain"
        android:layout_below="@+id/loginB"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_toLeftOf="@+id/loginB"
        android:layout_toStartOf="@+id/loginB"
        android:ems="10"
        android:hint="Nom*"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/t2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_toEndOf="@+id/t1"
        android:layout_toRightOf="@+id/t1"
        android:ems="10"
        android:hint="Prénom*"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/t3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t1"
        android:layout_alignStart="@+id/t1"
        android:layout_below="@+id/t1"
        android:ems="10"
        android:hint="Pseudo*"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t3"
        android:layout_alignStart="@+id/t3"
        android:layout_below="@+id/t3"
        android:ems="10"
        android:hint="Email*"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t4"
        android:layout_alignStart="@+id/t4"
        android:layout_below="@+id/t4"
        android:ems="10"
        android:hint="Mot de passe*"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/t6"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t5"
        android:layout_alignStart="@+id/t5"
        android:layout_below="@+id/t5"
        android:ems="10"
        android:hint="Comfirmer Mot de passe*"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/inscB"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:text="@string/inscrir"
        android:layout_below="@+id/t6"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ou s'inscrir avec "
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/signupB"
        android:layout_alignStart="@+id/signupB"
        android:layout_marginBottom="20dp" />

    <ImageButton
        android:id="@+id/faceB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/t5"
        android:layout_alignRight="@+id/t5"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/googleB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/faceB"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/t1"
        android:layout_toRightOf="@+id/t1"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/googleplus" />

    <ImageButton
        android:id="@+id/eyeM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/t6"
        android:layout_alignEnd="@+id/t6"
        android:layout_alignRight="@+id/t6"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/ic_action_name_eye" />
</RelativeLayout>
